--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <p>Pictures: <strong>₹150</strong></p>
             <p>Special VC: <strong>₹300</strong></p>
             <p>My Pic Collection + My F#ced Scenes: <strong>₹500</strong></p>
-            <a href="your-drive-link" class="btn">View Full Collection</a>
+            <a href="https://drive.google.com/drive/folders/1BA8nflmFDLFEO_fcGlas0JJEJWj7rQ6w?usp=sharing" class="btn">View Full Collection</a>
         </section>
     </div>
 </body>
