--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="intro">
             <img src="4.jpg" alt="Simran's Photo">
             <h1>Hi, I'm Simran</h1>
-            <p>Welcome to my portfolio. I specialize in offering personalized experiences through video calls and photo collections.</p>
+            <p>Welcome to my portfolio. i offer nude vedio calls,vedios,pics, sex chat in reasonable prices,(vc-200, sex chat with pics-150,speacial vc-500, my collection-500).</p>
         </section>
 
         <!-- Demo Pictures Section -->
@@ -73,7 +73,7 @@
             <p>Paid Girl VC: <strong>₹200</strong></p>
             <p>Pictures: <strong>₹150</strong></p>
             <p>Special VC: <strong>₹300</strong></p>
-            <p>My Pic Collection + My F#ced Scenes: <strong>₹500</strong></p>
+            <p>My Pic Collection + My F#ced Scenes: <strong>₹500 (To acess this drive link contact me and payment first)</strong></p>
             <a href="https://drive.google.com/drive/folders/1BA8nflmFDLFEO_fcGlas0JJEJWj7rQ6w?usp=sharing" class="btn">View Full Collection</a>
         </section>
     </div>
