--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="intro">
             <img src="4.jpg" alt="Simran's Photo">
             <h1>Hi, I'm Simran</h1>
-            <p>Welcome to my portfolio. i offer nude vedio calls,vedios,pics, sex chat in reasonable prices,(vc-200, sex chat with pics-150,speacial vc-500, my collection-500).</p>
+            <p>Welcome to my portfolio. i offer nude vedio calls,vedios,pics, sex chat in reasonable prices.</p>
         </section>
 
         <!-- Demo Pictures Section -->
