--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
             <h2>Services & Pricing</h2>
             <p>Paid Girl VC: <strong>₹250</strong></p>
             <p>Pictures: <strong>₹450</strong></p>
-            <p>Special VC: <strong>₹700</strong></p>
+            <p>Special VC: <strong>₹500</strong></p>
+            <p>Combo pack: <strong>₹700</strong></p>
             <p>My Pic Collection + My F#ced Scenes: <strong>₹500 (To access this drive link contact me and payment first)</strong></p>
             <a href="https://drive.google.com/drive/folders/165rSevexpXfullVq-4Qr2gFYv8K6ZzTB?usp=sharing" class="btn">View Full Collection</a>
             
